--- a/spring-server/src/main/resources/application.properties
+++ b/spring-server/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/faers_smartapi
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbname
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
